--- a/about.html
+++ b/about.html
@@ -90,7 +90,9 @@
                         <!-- logo -->
                         <div class="col-3">
                             <div class="logo">
-                                <img src="images/lovemond-2.png" alt="lovemond">
+                                <a href="index.html">
+                                    <img src="images/lovemond-2.png" alt="lovemond">
+                                </a>
                             </div>
                         </div>
                         <!-- header menu -->
@@ -98,12 +100,12 @@
                             <div class="menu-bar">
                                 <ul class="d-flex align-items-center pt-3">
                                     <li class="pe-3">
-                                        <a href="home.html">
+                                        <a href="index.html">
                                             <span>Home</span>
                                         </a>
                                     </li>
                                     <li class="px-3">
-                                        <a href="">
+                                        <a href="about.html">
                                             <span>About</span>
                                         </a>
                                     </li>
