--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
         <!-- bootstrap -->
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-        <!-- bootstrap icon -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <!-- font awesome icon -->
+        <link rel="stylesheet" href="css/all.min.css">
         <!-- font -->
         <link rel="stylesheet" href="css/fonts.css">
         <!-- stylesheet -->
@@ -29,8 +29,9 @@
                             <div class="contact-information p-1">
                                 <ul class="d-flex align-items-center">
                                     <li>
-                                        <a href="tel:1234567890" class="text-black">
-                                            <i class="bi bi-telephone-fill"></i>
+                                        <a href="tel:1234567890"
+                                            class="text-black">
+                                            <i class="fa-solid fa-phone"></i>
                                             <span>+91 1234567890</span>
                                         </a>
                                     </li>
@@ -38,8 +39,9 @@
                                         <span>|</span>
                                     </li>
                                     <li>
-                                        <a href="mailto:lovedimond.gmail.com" class="text-black">
-                                            <i class="bi bi-envelope-fill pe-1"></i>
+                                        <a href="mailto:lovedimond.gmail.com"
+                                            class="text-black">
+                                            <i class="fa-solid fa-envelope"></i>
                                             <span>lovedimond.gmail.com</span>
                                         </a>
                                     </li>
@@ -48,9 +50,10 @@
                         </div>
                         <div class="col-6">
                             <div class="contact-details">
-                                <ul class="d-flex align-items-center justify-content-end">
+                                <ul
+                                    class="d-flex align-items-center justify-content-end">
                                     <li>
-                                        <a href="" class="text-black">
+                                        <a href class="text-black">
                                             <span>My Account</span>
                                         </a>
                                     </li>
@@ -60,20 +63,25 @@
                                     <li class="dropdown position-relative">
                                         <a type="button" class="text-black">
                                             <span>English</span>
-                                            <i class="bi bi-chevron-down"></i>
+                                            <i
+                                                class="fa-solid fa-angle-down"></i>
                                         </a>
                                         <ul class="sub-menu text-center">
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">Spanish</a>
+                                                <a href
+                                                    class="text-white py-3">Spanish</a>
                                             </li>
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">Arbic</a>
+                                                <a href
+                                                    class="text-white py-3">Arbic</a>
                                             </li>
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">French</a>
+                                                <a href
+                                                    class="text-white py-3">French</a>
                                             </li>
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">English</a>
+                                                <a href
+                                                    class="text-white py-3">English</a>
                                             </li>
                                         </ul>
                                     </ul>
@@ -91,7 +99,8 @@
                         <div class="col-3">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="images/lovemond-2.png" alt="lovemond">
+                                    <img src="images/lovemond-2.png"
+                                        alt="lovemond">
                                 </a>
                             </div>
                         </div>
@@ -110,37 +119,68 @@
                                         </a>
                                     </li>
                                     <li class="px-3">
-                                        <a href="">
+                                        <a href>
                                             <span>Shop</span>
                                         </a>
                                     </li>
                                     <li class="px-3">
-                                        <a href="">
+                                        <a href>
                                             <span>Blog</span>
                                         </a>
                                     </li>
                                     <li class="px-3 dropdown position-relative">
-                                        <a href="">
+                                        <a href>
                                             <span>Pages</span>
                                         </a>
                                         <ul class="sub-menu text-center">
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">Spanish</a>
+                                                <a href
+                                                    class="text-white py-3">Spanish</a>
                                             </li>
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">Arbic</a>
+                                                <a href
+                                                    class="text-white py-3">Arbic</a>
                                             </li>
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">French</a>
+                                                <a href
+                                                    class="text-white py-3">French</a>
                                             </li>
                                             <li class="py-1">
-                                                <a href="" class="text-white py-3">English</a>
+                                                <a href
+                                                    class="text-white py-3">English</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="ps-3">
-                                        <a href="">
+                                        <a href>
                                             <span>Contact Us</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- Search menu -->
+                        <div class="col-4">
+                            <div class="search-bar">
+                                <ul class=" d-flex align-items-center justify-content-end">
+                                    <li>
+                                        <form class="form-inline">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="fa-solid fa-magnifying-glass"></i></span>
+                                                </div>
+                                                <input type="text" class="form-control" placeholder="Search">
+                                            </div>
+                                        </form>
+                                    </li>
+                                    <li>
+                                        <a href>
+
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href>
+
                                         </a>
                                     </li>
                                 </ul>
