--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                                     <li>
                                         <form class="form-inline">
                                             <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text"><i class="fa-solid fa-magnifying-glass"></i></span>
-                                                </div>
-                                                <input type="text" class="form-control" placeholder="Search">
+                                                <input type="search" class="search" placeholder="Search">
+                                                <a href="" class="input-group-text px-1">
+                                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                                </a>
                                             </div>
                                         </form>
                                     </li>
